tests/parser/tests/cases/should_fail/incomplete_list_pattern/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:1
1 |   [a := b;
  |   ^ here
  = note: Encountered unclosed delimiter `[`, consider adding a `]` after inner expression 
